--- a/lib/kamansky_web/live/listing_live/active.html.heex
+++ b/lib/kamansky_web/live/listing_live/active.html.heex
@@ -52,7 +52,7 @@
     </td>
     <td><%= format_decimal_as_currency(listing.listing_price) %></td>
     <td><%= formatted_date(listing.inserted_at) %></td>
-    <td>
+    <td class="flex">
       <a
         class="action-icon"
         title="Add Listing to Order"
@@ -75,6 +75,19 @@
           />
         </svg>
       </a>
+      <%= if Listing.hipstamp?(listing) do %>
+        <a
+          href={"https://www.hipstamp.com/listing/stamp/#{listing.hipstamp_listing.hipstamp_id}"}
+          class="action-icon"
+          target="_blank"
+          title="View on Hipstamp"
+        >
+          <img
+            class="h-5 w-5"
+            src={Routes.static_path(@socket, "/images/hipstamp-logo.png")} 
+          />
+        </a>
+      <% end %>
     </td>
   </.live_component>
   <KamanskyWeb.ListingLive.Components.tabs socket={@socket} />
