--- a/lib/kamansky_web/live/components/data_table.html.heex
+++ b/lib/kamansky_web/live/components/data_table.html.heex
@@ -43,7 +43,7 @@
                     <% header when is_map(header) -> %>
                       <th 
                         class={
-                          "cursor-disabled px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider " <>
+                          "px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider " <>
                           (if Map.get(header, :align), do: header.align, else: "") <>
                           (if Map.get(header, :sort) == :disabled, do: " cursor-disabled", else: "")
                         }
