Fixed loading state of confirmation modal

--- a/lib/kamansky_web/templates/layout/live.html.heex
+++ b/lib/kamansky_web/templates/layout/live.html.heex
@@ -8,3 +8,4 @@
   <KamanskyWeb.Components.Page.success_message flash={@flash}/>
   <%= @inner_content %>
 </main>
+<KamanskyWeb.Components.Page.confirmation_modal />
