--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -125,6 +125,32 @@
       @apply bg-warm-gray-50;
     }
   }
+
+  #kamansky-confirmation-modal {
+    #kamansky-confirmation-modal-button-loading {
+      @apply hidden;
+    }
+  
+    #kamansky-confirmation-modal-button-normal {
+      @apply inline;
+    }
+  
+    .phx-click-loading, .phx-click-loading + button {
+      @apply cursor-not-allowed opacity-50;
+
+      &:active {
+        @apply pointer-events-none;
+      }
+
+      #kamansky-confirmation-modal-button-loading {
+        @apply flex;
+      }
+  
+      #kamansky-confirmation-modal-button-normal {
+        @apply hidden;
+      }
+    }
+  }
 }
 
 @layer utilities {
