--- a/lib/kamansky_web/live/listing_live/active.html.heex
+++ b/lib/kamansky_web/live/listing_live/active.html.heex
@@ -111,17 +111,18 @@
           </svg>
         </a>
         <%= unless Listing.ebay?(listing) do %>
-          <KamanskyWeb.Components.Page.link_with_confirmation
-            action="list_on_ebay"
-            content="Are you sure you want to list this listing on eBay?"
+          <a
+            class="action-icon"
             title="List on eBay"
-            values={[{"listing-id", listing.id}]}
+            phx-click="open"
+            phx-target="#listing-list-on-ebay-form-modal"
+            phx-value-listing-id={listing.id}
           >
             <img
               class="h-5 w-5"
               src={Routes.static_path(@socket, "/images/ebay-logo.svg")} 
             />
-          </KamanskyWeb.Components.Page.link_with_confirmation>
+          </a>
         <% end %>
         <%= unless Listing.hipstamp?(listing) do %>
           <KamanskyWeb.Components.Page.link_with_confirmation
@@ -144,6 +145,10 @@
 <%= live_modal KamanskyWeb.ListingLive.AddToOrderFormComponent,
   id: "listing-add-to-order-form-modal",
   form_id: "listing-add-to-order-form"
+%>
+<%= live_modal KamanskyWeb.ListingLive.ListOnEbayFormComponent,
+  id: "listing-list-on-ebay-form-modal",
+  form_id: "listing-list-on-ebay-form"
 %>
 <%= live_modal KamanskyWeb.StampLive.DetailComponent,
   id: "stamp-detail-modal",
