--- a/lib/kamansky_web/live/notification_live/notifications.html.heex
+++ b/lib/kamansky_web/live/notification_live/notifications.html.heex
@@ -2,9 +2,14 @@
   class="fixed inset-0 flex items-end px-4 py-6 pointer-events-none sm:p-6 sm:items-start"
   aria-live="assertive"
 >
-  <div class="w-full flex flex-col items-center space-y-4 sm:items-end">
+  <div
+    id="kamansku-notifications"
+    class="w-full flex flex-col items-center space-y-4 sm:items-end" 
+    phx-update="append"
+  >
     <%= for notification <- @notifications do %>
-      <div 
+      <div
+        id={"kamansky-notification-#{notification.id}"} 
         class="max-w-sm w-full bg-white shadow-lg rounded-lg pointer-events-auto ring-1 ring-black ring-opacity-5 overflow-hidden"
         x-data="{show: true}"
         x-show="show"
@@ -28,8 +33,8 @@
             <div class="ml-4 flex-shrink-0 flex">
               <button 
                 class="bg-white rounded-md inline-flex text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
-                phx-click="read"
-                phx-value-notification_id={notification.id}
+                phx-click="update_last_read"
+                phx-value-notification-id={notification.id}
                 x-on:click="show = false"
               >
                 <span class="sr-only">Close</span>
