--- a/lib/kamansky_web/live/components/modal.html.heex
+++ b/lib/kamansky_web/live/components/modal.html.heex
@@ -60,19 +60,27 @@
             <.live_component module={@component} {@opts} />
           </div>
           <%= unless @opts[:footer] == false do %>
-            <div class="border border-gray-200 flex justify-end rounded-b p-3">
-              <button 
-                class="btn btn-gray"
-                type="button"
-                x-on:click="open = false"
-              >Cancel</button>
+            <div class="border border-gray-200 flex flex-row-reverse justify-start rounded-b p-3">
               <button
                 type="submit"
                 class="btn btn-blue ml-1"
                 form={Keyword.get(@opts, :form_id)}
                 phx-click={Keyword.get(@opts, :button_action)}
-                x-text="buttonText ? buttonText : title"
-              ></button>
+              >
+                <div class="kamansky-button-loading">
+                  <svg class="animate-spin -ml-1 mr-3 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                    <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+                  </svg>
+                  Processing
+                </div>
+                <span class="kamansky-button-normal" x-text="buttonText ? buttonText : title" />
+              </button>
+              <button 
+                class="btn btn-gray"
+                type="button"
+                x-on:click="open = false"
+              >Cancel</button>
             </div>
           <% end %>
         </div>
