--- a/lib/kamansky_web/live/components/header.html.heex
+++ b/lib/kamansky_web/live/components/header.html.heex
@@ -109,7 +109,8 @@
                     role="menu" 
                     aria-orientation="vertical" 
                     aria-labelledby="menu-button" 
-                    tabindex="-1" 
+                    tabindex="-1"
+                    x-cloak
                     x-show="adminDropdown"
                     x-transition:enter="ease-out duration-100"
                     x-transition:enter-start="opacity-100 scale-95"
@@ -174,6 +175,7 @@
                   aria-orientation="vertical" 
                   aria-labelledby="user-menu-button" 
                   tabindex="-1"
+                  x-cloak
                   x-show="userMenuOpen"
                   x-transition:enter="ease-out duration-100 transition"
                   x-transition:enter-start="opacity-0 scale-95 transform"
