--- a/lib/kamansky_web/live/listing_live/active.html.heex
+++ b/lib/kamansky_web/live/listing_live/active.html.heex
@@ -141,6 +141,8 @@
     </td>
   </.live_component>
   <KamanskyWeb.ListingLive.Components.tabs socket={@socket} />
+  <button phx-click="success">Success</button>
+  <button phx-click="error">Error</button>
 </section>
 <%= live_modal KamanskyWeb.ListingLive.AddToOrderFormComponent,
   id: "listing-add-to-order-form-modal",
