--- a/lib/kamansky_web/live/stamp_live/index.html.heex
+++ b/lib/kamansky_web/live/stamp_live/index.html.heex
@@ -101,5 +101,6 @@
 %>
 <%= live_modal KamanskyWeb.StampLive.ListingFormComponent,
   id: "listing-form-modal",
-  form_id: "listing-form"
+  form_id: "listing-form",
+  external: true
 %>
