--- a/lib/kamansky_web/live/components/header.html.heex
+++ b/lib/kamansky_web/live/components/header.html.heex
@@ -184,6 +184,12 @@
                   x-transition:leave-start="opacity-100 scale-100 transform"
                   x-transition:leave-end="opacity-0 scale-95 transform"
                 >
+                  <%= live_redirect "Settings",
+                    class: "block px-4 py-2 text-sm text-gray-700",
+                    role: "menuitem",
+                    tabindex: -1,
+                    to: Routes.user_settings_path(@socket, :index)
+                  %>
                   <%= link "Sign out",
                     class: "block px-4 py-2 text-sm text-gray-700",
                     method: :delete,
