--- a/lib/kamansky_web/live/user_live/settings.html.heex
+++ b/lib/kamansky_web/live/user_live/settings.html.heex
@@ -3,11 +3,14 @@
   <div class="mt-4 lg:grid lg:grid-cols-12 lg:gap-x-5">
     <aside class="py-6 px-2 sm:px-6 lg:py-0 lg:px-0 lg:col-span-3">
       <nav class="space-y-1">
-        <a href="#" class="text-gray-900 hover:text-gray-900 hover:bg-gray-50 group rounded-md px-3 py-2 flex items-center text-sm font-medium">
+        <%= live_patch to: Routes.user_settings_path(@socket, :index, %{section: "account"}),
+          class: "group rounded-md px-3 py-2 flex items-center text-sm font-medium " <>
+            (if @section == "account", do: "bg-gray-50 text-indigo-600 hover:bg-white", else: "text-gray-900 hover:text-gray-900 hover:bg-gray-50 ")
+        do %>
           <span class="truncate">
             Account
           </span>
-        </a>
+        <% end %>
         <%= live_patch to: Routes.user_settings_path(@socket, :index, %{section: "subscriptions"}),
           class: "group rounded-md px-3 py-2 flex items-center text-sm font-medium " <>
             (if @section == "subscriptions", do: "bg-gray-50 text-indigo-600 hover:bg-white", else: "text-gray-900 hover:text-gray-900 hover:bg-gray-50 ")
