Delete external listings when order is finalized.

--- a/lib/kamansky_web/live/listing_live/active.html.heex
+++ b/lib/kamansky_web/live/listing_live/active.html.heex
@@ -148,7 +148,8 @@
 %>
 <%= live_modal KamanskyWeb.ListingLive.ListOnEbayFormComponent,
   id: "listing-list-on-ebay-form-modal",
-  form_id: "listing-list-on-ebay-form"
+  form_id: "listing-list-on-ebay-form",
+  external: true
 %>
 <%= live_modal KamanskyWeb.StampLive.DetailComponent,
   id: "stamp-detail-modal",
