Overhauled the pagination system.

--- a/lib/kamansky_web/live/customer_live/index.html.heex
+++ b/lib/kamansky_web/live/customer_live/index.html.heex
@@ -1,33 +1,28 @@
-<section>
+<div>
   <KamanskyWeb.Components.Page.page_header page_title="Customers" />
-  <.live_component module={KamanskyWeb.Components.DataTable}
-    let={customer}
-    id="customers-kamansky-data-table",
-    headers={
-        [
-          "Name",
-          %{text: "Address", sort: :disabled},
-          %{text: "Email", sort: :disabled},
-          "Amount Spent YTD",
-          "Most Recent Purchase",
-          %{text: "Actions", sort: :disabled},
-        ]
-      }
-    data_count={@data_count}
-    data_locator={@data_locator}
-    data_source={@data_source}
+  <KamanskyWeb.Components.DataTable.table
+    rows={@data}
+    pagination={@pagination}
+    socket={@socket}
+    live_action={@live_action}
     empty_message="There are no customers to display."
-    options={[
-      go_to_record: Map.get(assigns, :go_to_record),
-      sort: 0
-    ]}
   >
-    <td><%= live_redirect customer.name, to: Routes.customer_show_path(@socket, :show, customer) %></td>
-    <td><%= Customer.full_address(customer) %></td>
-    <td><%= Customer.formatted_email(customer) %></td>
-    <td><%= format_decimal_as_currency(customer.amount_spent_ytd) %></td>
-    <td><%= formatted_date(customer.most_recent_order_date) %></td>
-    <td>
+    <:col let={customer} label="Name">
+      <%= live_redirect customer.name, to: Routes.customer_show_path(@socket, :show, customer) %>
+    </:col>
+    <:col let={customer} label="Address" sort="disabled">
+      <%= Customer.full_address(customer) %>
+    </:col>
+    <:col let={customer} label="Email" sort="disabled">
+      <%= Customer.formatted_email(customer) %>
+    </:col>
+    <:col let={customer} label="Amount Spent YTD">
+      <%= format_decimal_as_currency(customer.amount_spent_ytd) %>
+    </:col>
+    <:col let={customer} label="Most Recent Purchase">
+      <time datetime={customer.most_recent_order_date}><%= formatted_date(customer.most_recent_order_date) %></time>
+    </:col>
+    <:col let={customer} label="Actions" sort="disabled">
       <a 
         class="action-icon"
         phx-click="open"
@@ -36,9 +31,9 @@
       >
         <KamanskyWeb.Components.Icons.edit />
       </a>
-    </td>
-  </.live_component>
-</section>
+    </:col>
+  </KamanskyWeb.Components.DataTable.table>
+</div>
 <%= live_modal KamanskyWeb.CustomerLive.FormComponent,
   id: "edit-customer-form-modal",
   form_id: "customer-form"
