--- a/lib/kamansky_web/live/purchase_live/index.html.heex
+++ b/lib/kamansky_web/live/purchase_live/index.html.heex
@@ -1,4 +1,4 @@
-<section>
+<div>
   <KamanskyWeb.Components.Page.page_header
     buttons=
       {
@@ -16,36 +16,26 @@
       }
     page_title="Purchases"
   />
-  <.live_component module={KamanskyWeb.Components.DataTable}
-    id="purchases-kamansky-data-table"
-    let={purchase}
-    headers=
-      {
-        [
-          "Date",
-          "Description",
-          "Quantity",
-          "Total Cost",
-          %{text: "Actions", sort: :disabled},
-        ]
-      }
-    data_count={@data_count}
-    data_locator={@data_locator}
-    data_source={@data_source}
+  <KamanskyWeb.Components.DataTable.table
+    rows={@data}
+    pagination={@pagination}
+    socket={@socket}
+    live_action={@live_action}
     empty_message="There are no purchases to display."
-    options=
-      {
-        [
-          go_to_record: Map.get(assigns, :go_to_record),
-          sort: 0
-        ]
-      }
   >
-    <td><%= formatted_date(purchase.date) %></td>
-    <td><%= purchase.description %></td>
-    <td><%= purchase.quantity %></td>
-    <td><%= format_decimal_as_currency(Purchase.total_cost(purchase)) %></td>
-    <td>
+    <:col let={purchase} label="Date">
+      <time datetime={purchase.date}><%= formatted_date(purchase.date) %></time>
+    </:col>
+    <:col let={purchase} label="Description">
+      <%= purchase.description %>
+    </:col>
+    <:col let={purchase} label="Quantity">
+      <%= purchase.quantity %>
+    </:col>
+    <:col let={purchase} label="Total Cost">
+      <%= format_decimal_as_currency(Purchase.total_cost(purchase)) %>
+    </:col>
+    <:col let={purchase} label="Actions" sort="disabled">
       <a
         class="action-icon"
         phx-click="open"
@@ -55,9 +45,9 @@
       >
         <KamanskyWeb.Components.Icons.edit />
       </a>
-    </td>
-  </.live_component>
-</section>
+    </:col>
+  </KamanskyWeb.Components.DataTable.table>
+</div>
 <%= live_modal KamanskyWeb.PurchaseLive.FormComponent,
   id: "purchase-form-modal",
   form_id: "purchase-form"
