--- a/lib/kamansky_web/live/stamp_reference_live/index.html.heex
+++ b/lib/kamansky_web/live/stamp_reference_live/index.html.heex
@@ -1,4 +1,4 @@
-<section>
+<div>
   <KamanskyWeb.Components.Page.page_header
     buttons={
       [
@@ -16,32 +16,20 @@
     }
     page_title={@page_title}
   />
-  <.live_component module={KamanskyWeb.Components.DataTable}
-    id="stamp-references-kamansky-data-table"
-    let={stamp_reference}
-    headers=
-      {
-        [
-          "Scott Number",
-          %{text: "Description", sort: :disabled},
-          %{text: "Actions", sort: :disabled},
-        ]
-      }
-    data_count={@data_count}
-    data_locator={@data_locator}
-    data_source={@data_source}
-    empty_message="There are no stamp references to display.",
-    options={
-      [
-        go_to_record: Map.get(assigns, :go_to_record),
-        sort: 0
-      ]
-    }
-    title={@page_title}
+  <KamanskyWeb.Components.DataTable.table
+    rows={@data}
+    pagination={@pagination}
+    socket={@socket}
+    live_action={@live_action}
+    empty_message="There are no stamp references to display."
   >
-    <td><%= stamp_reference.scott_number %></td>
-    <td><%= StampReference.description(stamp_reference) %></td>
-    <td>
+    <:col let={stamp_reference} label="Scott Number">
+      <%= stamp_reference.scott_number %>
+    </:col>
+    <:col let={stamp_reference} label="Description" sort="disabled">
+      <%= StampReference.description(stamp_reference) %>
+    </:col>
+    <:col let={stamp_reference} label="Actions" sort="disabled">
       <%= unless @live_action == :missing_from_collection do %>
         <a
           class="action-icon"
@@ -53,8 +41,8 @@
           <KamanskyWeb.Components.Icons.edit />
         </a>
       <% end %>
-    </td>
-  </.live_component>
+    </:col>
+  </KamanskyWeb.Components.DataTable.table>
   <%= if @live_action == :missing_from_collection do %>
     <KamanskyWeb.StampLive.CollectionComponents.types_footer 
       socket={@socket}
@@ -62,7 +50,7 @@
       parent_index={@parent_index}
     />
   <% end %>
-</section>
+</div>
 <%= live_modal KamanskyWeb.StampReferenceLive.FormComponent,
   id: "stamp_reference-form-modal",
   form_id: "stamp_reference-form"
