--- a/lib/kamansky_web/live/trend_live/sold.html.heex
+++ b/lib/kamansky_web/live/trend_live/sold.html.heex
@@ -1,35 +1,27 @@
-<section>
+<div>
   <KamanskyWeb.Components.Page.page_header page_title={@page_title} />
-  <.live_component module={KamanskyWeb.Components.DataTable}
-    id="trends-scott_number-kamansky-data-table"
-    let={stamp}
-    headers=
-      {
-        [
-          "Scott Number",
-          "Total Sold",
-          "Conversion",
-          "Median Sale Price",
-          "Total Profit"
-        ]
-      }
-    data_count={@data_count}
-    data_locator={@data_locator}
-    data_source={@data_source}
+  <KamanskyWeb.Components.DataTable.table
+    rows={@data}
+    pagination={@pagination}
+    socket={@socket}
+    live_action={@live_action}
     empty_message="There are no stamps to display."
-    options=
-      {
-        [
-          go_to_record: Map.get(assigns, :go_to_record),
-          sort: %{column: 1, direction: :desc}
-        ]
-      }
   >
-    <td><%= stamp.scott_number %></td>
-    <td><%= stamp.total_sold %></td>
-    <td><%= round(stamp.conversion_percentage) %>%</td>
-    <td><%= format_decimal_as_currency(stamp.median_sale_price) %></td>
-    <td><%= format_decimal_as_currency(stamp.total_profit) %></td>
-  </.live_component>
+    <:col let={stamp} label="Scott Number">
+      <%= stamp.scott_number %>
+    </:col>
+    <:col let={stamp} label="Total Sold">
+      <%= stamp.total_sold %>
+    </:col>
+    <:col let={stamp} label="Conversion">
+      <%= round(stamp.conversion_percentage) %>%
+    </:col>
+    <:col let={stamp} label="Median Sale Price">
+      <%= format_decimal_as_currency(stamp.median_sale_price) %>
+    </:col>
+    <:col let={stamp} label="Total Profit">
+      <%= format_decimal_as_currency(stamp.total_profit) %>
+    </:col>
+  </KamanskyWeb.Components.DataTable.table>
   <KamanskyWeb.TrendLive.Components.footer socket={@socket} />
-</section>
+</div>
