Fix redirection when listing stamp.

--- a/lib/kamansky_web/live/customer_live/show.html.heex
+++ b/lib/kamansky_web/live/customer_live/show.html.heex
@@ -12,6 +12,7 @@
     rows={@data}
     pagination={@pagination}
     socket={@socket}
+    assigns={assigns}
     live_action={@live_action}
     empty_message="There are no orders to display."
   >
